# forgewright

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  CLAUDE.md  Dockerfile.claude  Dockerfile.opencode  LICENSE  README.md  config.example.yaml  crontab.example  docker-compose.yml  forgewright.py  install.docker.sh  install.sh  pyproject.toml  update.docker.sh  update.sh
.github/workflows/: ci.yml  docker.yml
docker/: entrypoint.sh
docs/: architecture.md  configuration.md  contributing.md  installation.md
forgewright/: __init__.py  __main__.py  config.py  decision.py  formatting.py  git.py  handlers.py  helpers.py  main.py  parsing.py  posting.py  prompts.py  state.py  types.py  webhook.py
forgewright/agent/: __init__.py  base.py  claude_code.py  opencode.py
forgewright/platform/: __init__.py  base.py  github.py  gitlab.py
systemd/: forgewright-webhook.service  forgewright.service  forgewright.timer
tests/: conftest.py  test_agent.py  test_config.py  test_config_extended.py  test_decision.py  test_formatting.py  test_git.py  test_handlers.py  test_handlers_extended.py  test_helpers.py  test_helpers_extended.py  test_identity.py  test_main.py  test_parsing.py  test_platform.py  test_posting.py  test_process_project.py  test_state.py  test_webhook.py
